--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>liboldfart</name>
   <url>http://www.montyprojects.com</url>
+	<properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+	</properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -26,6 +31,13 @@
       <artifactId>libstrip</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>    
+
+       <dependency>
+      <groupId>br.odb</groupId>
+      <artifactId>libscene</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>    
+
 
   </dependencies>
   
