--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>    
     
-    <dependency>
+    <!--dependency>
       <groupId>br.odb</groupId>
       <artifactId>libscene</artifactId>
       <version>1.0-SNAPSHOT</version>
-    </dependency>    
+    </dependency-->    
   </dependencies>
 </project>
