Add a bunch to gitignore
So they won't disturb us again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+/.idea/.name
+/.idea/compiler.xml
+/.idea/copyright/profiles_settings.xml
+/.idea/encodings.xml
+/.idea/libraries/Maven__br_odb_gameutils_1_0_SNAPSHOT.xml
+/.idea/libraries/Maven__br_odb_libstrip_1_0_SNAPSHOT.xml
+/.idea/libraries/Maven__junit_junit_4_10.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_1.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/liboldfart.iml
+/target/surefire-reports/TEST-br.odb.liboldfart.SimpleWavefrontOBJLoaderTest.xml
+/target/surefire-reports/br.odb.liboldfart.SimpleWavefrontOBJLoaderTest.txt
 *.class
 
 # Mobile Tools for Java (J2ME)
